hphp/test/zend/good/tests/classes/constants_error_005.php.expectf

Fatal error: Expected constant expression for initializer in %s/constants_error_005.php on line 4
